# rmux

./: .gitattributes  .gitignore  .mailmap  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DCO  GOVERNANCE.md  README.fr.md  README.ja.md  README.md  README.zh-CN.md  RELEASING.md  SECURITY.md  build.rs  deny.toml  flake.nix  rmux.1  rust-toolchain.toml
crates/rmux-proto/: Cargo.toml  README.md
crates/rmux-proto/src/: capabilities.rs  codec.rs  control.rs  envelope.rs  error.rs  frame_kind.rs  lib.rs  request.rs  response.rs  types.rs
crates/rmux-proto/src/codec/: tests.rs
crates/rmux-proto/src/request/: buffer.rs  client.rs  compat.rs  compat_tests.rs  pane.rs  server.rs  session.rs  show.rs  web.rs  window.rs
crates/rmux-proto/src/response/: pane.rs  web.rs
crates/rmux-proto/src/types/: options.rs  tests.rs
crates/rmux-proto/tests/: wire_compat.rs  wire_ledger_v1.rs  wire_v1.rs
crates/rmux-server/: Cargo.toml  README.md
crates/rmux-server/src/: buffer_file_io.rs  clipboard_protocol.rs  control.rs  control_mode.rs  control_notifications.rs  copy_mode.rs  daemon.rs  foreground_probe.rs  format_runtime.rs  handler.rs  handler_alert_tests.rs  handler_alerts.rs  handler_attach.rs  handler_attach_tests.rs  handler_attach_tests_normal_mount.rs  handler_attach_tests_passthrough_mount.rs  handler_background_tasks.rs  handler_buffer.rs  handler_buffer_tests.rs  handler_capture_tests.rs  handler_client.rs  handler_client_environment.rs  handler_client_runtime.rs  handler_clipboard_query.rs  handler_clipboard_query_test_pause.rs  handler_clipboard_query_tests.rs  handler_clock_mode.rs  handler_clock_mode_identity_tests.rs  handler_clock_mode_tests.rs  handler_config.rs  handler_control.rs  handler_control_delivery_failure_tests.rs  handler_control_lifecycle_tests.rs  handler_control_notification_tests.rs  handler_copy_mode.rs  handler_copy_mode_tests.rs  handler_daemon.rs  handler_default_command_tests.rs  handler_dispatch.rs  handler_display_message_tests.rs  (+98 more)
crates/rmux-server/src/buffer_file_io/: darwin_fifo_reader.rs  fifo_reader_fallback.rs  unix.rs  windows.rs
crates/rmux-server/src/control/: command_numbering.rs  command_validation.rs  output_queue.rs  subscriptions.rs  tests.rs
crates/rmux-server/src/copy_mode/: args.rs  commands.rs  line_numbers.rs  motion.rs  render.rs  search.rs  selection.rs  tests.rs  text.rs  transfer.rs  types.rs
crates/rmux-server/src/daemon_tests/: unix.rs  windows.rs
crates/rmux-server/src/format_runtime/: geometry.rs  loops.rs  path.rs  process.rs  variables.rs
crates/rmux-server/src/handler/: lifecycle_dispatch_queue.rs  lifecycle_producer_tasks.rs  pane_output_subscription_rekeys.rs  post_commit_sequencer.rs  sdk_wait_quota.rs  stable_target_identity.rs  web_request_identity.rs
crates/rmux-server/src/handler_alerts/: pane_events.rs  (+6 more)
crates/rmux-server/tests/: attach_render_goldens.rs  attach_session.rs  buffers.rs  capture.rs  formats.rs  hooks.rs  listing.rs  options_environment.rs  pane_management.rs  pane_transfer.rs  request_end_to_end.rs  scripting.rs  send_keys.rs  send_keys_windows.rs  session_crud.rs  status.rs  status_windows.rs  web_share_wire_ledger.rs  window_management.rs
scripts/fuzz/: Cargo.toml
scripts/fuzz/fuzz_targets/: detached_frame_decoder.rs
xtask/: Cargo.toml
xtask/spec/: feature-inventory-v1.yaml
xtask/src/: feature_inventory.rs  main.rs
(+1200 files in other folders)
