[package]
name = "rmux-server"
version = "0.3.1"
edition.workspace = true
publish = true
license.workspace = true
repository.workspace = true
description = "Tokio daemon and request dispatcher for the RMUX terminal multiplexer."
keywords = ["terminal", "multiplexer", "daemon"]
categories = ["command-line-interface"]

[dependencies]
async-recursion = "=1.1.1"
base64 = { version = "0.22", optional = true }
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
getrandom = { version = "0.3", optional = true }
glob = "0.3"
httparse = { version = "1.9", optional = true }
regex = "1.12.2"
rmux-core = { path = "../rmux-core", version = "0.3.1" }
rmux-ipc = { path = "../rmux-ipc", version = "0.3.1" }
rmux-os = { path = "../rmux-os", version = "0.3.1" }
rmux-proto = { path = "../rmux-proto", version = "0.3.1" }
rmux-pty = { path = "../rmux-pty", version = "0.3.1" }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
sha1 = { version = "0.10", optional = true }
subtle = { version = "2.6", optional = true }
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "process", "rt", "sync", "time"] }
tracing = "0.1"

[features]
default = ["web"]
web = [
    "dep:base64",
    "dep:getrandom",
    "dep:httparse",
    "dep:serde",
    "dep:serde_json",
    "dep:sha1",
    "dep:subtle",
]

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1.4", features = ["event", "fs", "net"] }
signal-hook = "0.3.18"

[dev-dependencies]
rustix = { version = "1.1.4", features = ["event", "fs", "termios"] }
